fix(Lotto): 리스트가 불변객체여서 정렬할때 생기는 에러 해결